<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".userprofile.UserProfileActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_user_profile">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/profile_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
