<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_bg"
    tools:context=".order.OrderFragment">


    <LinearLayout
        android:id="@+id/layout_size_select"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/topview"
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnOK"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:text="@string/ok" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_size" />

        <Spinner
            android:id="@+id/spinSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:entries="@array/size_arrays" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Switch" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_size_chart"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_rounded_bg"
        android:visibility="gone"
        tools:context=".order.OrderFragment">


        <WebView
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </FrameLayout>

</FrameLayout>