<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/container"
    tools:context=".DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:translationZ="1dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/Toolbar.TitleText"/>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:weightSum="1"
                android:background="#fff"
                android:alpha="0.9"
                android:layout_height="40dp">

                <TextView
                    android:text="@string/prompt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/txtPrompt1"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.25"
                    android:textSize="11sp" />

                <Button

                    android:id="@+id/button"

                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/white"

                    android:visibility="visible"
                    android:background="@android:color/holo_green_light"
                    android:layout_height="30dp"

                    android:text="Call"
                    android:textAllCaps="false"
                    android:layout_marginTop="2dp"
                    android:layout_width="60dp" />


                <TextView
                    android:text="@string/prompt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/txtPrompt2"
                    android:textColor="@color/colorPrimaryDark"




                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:textSize="10sp" />

                <Button
                    android:layout_height="30dp"
                    android:id="@+id/btnChangeImage"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:background="@android:color/holo_green_light"
                    android:text="Message"
                    android:textColor="@android:color/white"

                    android:layout_marginTop="2dp"
                    android:textAllCaps="false"
                    android:layout_width="80dp" />
                <TextView
                    android:text="@string/prompt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/txtPrompt3"
                    android:textColor="@color/colorPrimaryDark"




                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="3dp"
                    android:textSize="10dp" />
            </LinearLayout>




    </android.support.design.widget.AppBarLayout>
    <include layout="@layout/content_detail" />
    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/desc_frag_container"
        android:translationZ="5dp">



    </FrameLayout>






    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:translationZ="6dp">
        <ImageView
            android:id="@+id/imageViewBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/screen_background_dark"
            android:alpha="0.5" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:weightSum="1"
        android:background="#e1bee7">



        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.10"
            android:gravity="center_vertical"
            android:fadingEdge="vertical"
            android:layout_width="80dp"
            android:alpha="0.9">

            <ToggleButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/tbFavDetail"
                android:layout_gravity="center_vertical"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:elevation="1dp"
                android:background="@drawable/selector_toggle_button"
                style="@style/toggleButton" />
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="0.74"
            android:layout_gravity="center_vertical"
            android:fadingEdge="vertical"

            android:layout_margin="1dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_centerVertical="true">

            <TextView
                android:text="-aaaaa---"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/oldPrice"
                android:textColor="#4a148c"
                android:gravity="center_vertical|center_horizontal"
                android:layout_centerVertical="true"



                android:layout_alignParentTop="true"
                android:textSize="11sp"
                android:visibility="gone"
                />


                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"

                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|center_horizontal"


                    android:text="-aaaaaaa"
                    android:textColor="#4a148c"
                    android:textSize="11sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_weight="0.06"

            android:layout_width="80dp">

            <Button
                android:text="@string/btnDetail"
                android:id="@+id/btnDesc"

                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:visibility="visible"
                android:textColor="#ffffff"
                android:background="#4a148c"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:elevation="1dp" />

        </LinearLayout>


    </LinearLayout>

    </FrameLayout>
    <pas.com.mm.shoopingcart.image.ZoomImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="@string/description_zoom_touch_close"
        android:translationZ="10dp"
        android:background="@color/common_google_signin_btn_text_dark_focused" />

</android.support.design.widget.CoordinatorLayout>
